feat: 连接数据库，处理增删改查

--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@midwayjs/info": "^3.12.0",
     "@midwayjs/koa": "^3.12.0",
     "@midwayjs/logger": "^3.1.0",
-    "@midwayjs/validate": "^3.12.0"
+    "@midwayjs/sequelize": "3",
+    "@midwayjs/validate": "^3.12.0",
+    "mysql2": "^3.10.0",
+    "sequelize": "^6.37.3",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@midwayjs/mock": "^3.12.0",
